--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="/main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     
+    <span class="change-theme">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+    </span>
+    
+    <div class="container">
+        <div class="title">
+            <h1>Password Strength Taster</h1>
+        </div>
+        <div class="strength__bar" id="strength-bar">
+
+        </div>
+        <div class="password__input">
+            <input type="text" autofocus id="password">
+        </div>
+        <div class="reasons">
+            <ul id="reasons-place">
+
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
