style basics and change-theme created

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <script src="/main.js" defer></script>
     <title>Document</title>
 </head>
-<body>
+<body class="">
     
-    <span class="change-theme">
-        <i class="fas fa-moon"></i>
-        <i class="fas fa-sun"></i>
-    </span>
+    <div class="theme-container">
+        <span class="change-theme">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+        </span>
+    </div>
     
     <div class="container">
         <div class="title">
