generate-random-pass button created styled and got functionallity, strength bar style changed

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     
             </div>
             <div class="password__input">
-                <input type="text" autofocus id="password" value="Password">
+                <input type="text" autofocus id="password" >
             </div>
             <div class="reasons">
                 <ul id="reasons-place">
     
                 </ul>
             </div>
-
+            <button onclick="generatePass()" class="random__pass">Generate a random Password</button>
         </div>
     </div>
 
