giving password input default value

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
             </div>
             <div class="password__input">
-                <input type="text" autofocus id="password" >
+                <input type="text" autofocus id="password" value="Password">
             </div>
             <div class="reasons">
                 <ul id="reasons-place">
